# lerobot_vlbiman

./: MUJOCO_LOG.TXT  README.md  simulation_audit_report.md
Log/: OrbbecSDK.log.txt
lerobot_camera_gemini335l/: README.md  __init__.py  config_gemini335l.py  depth_viewer.py  diagnose_depth_startup.py  diagnostics.py  gemini335l.py  list_profiles.py  pyproject.toml  runtime_env.py  smoke_test.py  stream_viewer.py
lerobot_robot_cjjarm/: __init__.py  pyproject.toml
lerobot_robot_cjjarm/lerobot_robot_cjjarm/: DM_CAN.py  __init__.py  cjjarm_robot.py  cjjarm_sim.py  config_cjjarm.py  config_cjjarm_sim.py  kinematics.py
lerobot_robot_cjjarm/lerobot_robot_cjjarm/cjjarm_urdf/: README.md  TRLC-DK1-Follower-home.mjcf  TRLC-DK1-Follower.mjcf  TRLC-DK1-Follower.srdf  base_link.glb  collision_trlc-dk1.yml  finger_left.glb  finger_right.glb  link1-2.glb  link2-3.glb  link3-4.glb  link4-5.glb  link5-6.glb  link6-7.glb
lerobot_teleoperator_zhonglin/: __init__.py  pyproject.toml
lerobot_teleoperator_zhonglin/lerobot_teleoperator_zhonglin/: __init__.py  config_zhonglin.py  zhonglin_teleop.py
scripts/: convert_joints_to_pose.py  teleop_cjjarm_keyboard.py  teleop_cjjarm_zhonglin.py
scripts/gemini335l/: diagnose_depth_startup.sh  quick_check.sh  run_depth_viewer.sh  run_stream_viewer.sh
scripts/vlbiman_sa/: run_handeye_auto.sh  run_handeye_pipeline.sh  (+3 more)
tests/: test_manual_record_controls.py
tools/: test_actuators.py
计划书/: FRRG_任务计划书_增强版 (1).md  FRRG_任务计划书_整理版.md  FRRG计划书.md  vlbiman任务计划.md  任务计划书.md  视觉伺服计划书.md
运行脚本/: vlbiman脚本.md  视觉伺服脚本.md  遥控脚本.md
(+191 files in other folders)
